[gd_scene load_steps=5 format=3 uid="uid://cyo3li77q1lbt"]

[ext_resource type="Script" uid="uid://1ys45s4pi210" path="res://Scripts/arena_terrain.gd" id="1"]
[ext_resource type="Script" uid="uid://c5fqv7m0847vy" path="res://Scripts/free_camera.gd" id="2_u45fm"]

[sub_resource type="StandardMaterial3D" id="2"]
albedo_color = Color(0.32, 0.68, 0.34, 1)

[sub_resource type="Environment" id="Environment_u45fm"]

[node name="Arena" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.9783936, 0)
script = ExtResource("1")
height_scale = 100.0
height_step = 12.0
top_subdiv = 8
wall_subdiv = 8

[node name="TerrainBody" type="StaticBody3D" parent="."]

[node name="TerrainMesh" type="MeshInstance3D" parent="TerrainBody"]
material_override = SubResource("2")

[node name="TerrainCollision" type="CollisionShape3D" parent="TerrainBody"]

[node name="SUN" type="DirectionalLight3D" parent="TerrainBody"]
transform = Transform3D(0.7503439, -0.6606659, -0.02246192, 0.002432795, -0.031219212, 0.9995095, -0.6610432, -0.75003046, -0.021817878, 87.832275, 336.62012, 98.21031)
shadow_enabled = true
directional_shadow_max_distance = 8192.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_u45fm")

[node name="DebugCamera" type="Camera3D" parent="."]
transform = Transform3D(0.6967067, -0.4050497, 0.59205955, 0, 0.8253356, 0.5646425, -0.7173561, -0.3933902, 0.57501686, 200, 140, 200)
current = true
far = 40090.0
script = ExtResource("2_u45fm")
move_speed = 40.0
mouse_sensitivity = 0.001
